js/js.translator/testData/incremental/invalidation/updateExports/lib2/l2a.2.kt
fun funA() = listOf(fun3()).joinToString()
